lots of updates...yay!

--- a/klass_site/index.html
+++ b/klass_site/index.html
@@ -50,12 +50,12 @@
                             <header class="major">
                                 <h2>Define your self-worth </h2>
                             </header>
-                            <p>The future is now in your hands. Once you have downloaded Klass, you have access to the world's largest social network. Rate your peers, learn about the strangers next to you, and raise your personal rating through real-life experiences. Let Klass take you higher.</p>
+                            <p>The future is now in your hands. Once you have downloaded Klass, you have access to the world's largest social network. Rate your peers, discover the strangers beside you, and raise your personal rating through real-life experiences. Let Klass take you higher.</p>
                             <ul class="actions">
                                 <li><a href="generic.html" class="button">Learn More</a></li>
                             </ul>
                         </div>
-                        <span class="image"><img src="images/profile_MU.png" alt="" /></span>
+                        <img src="images/profile_MU.png" alt="" style="height:400px;" />
                     </div>
                 </section>
 
@@ -68,17 +68,17 @@
                         <li>
                             <span class="image"><img src="images/networkMU.png" alt="" style="height:400px;"/></span>
                             <h3>Network</h3>
-                            <p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+                            <p>Stroll down memory lane and rediscover people you have viewed and rated, despite any questionable experiences.</p>
                         </li>
                         <li>
                             <span class="image"><img src="images/camera_MU.png" alt="" style="height:400px;"/></span>
                             <h3>Camera</h3>
-                                <p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+                            <p>Snap a quick picture of a stranger to absorb their personal information or provide an honest review.</p>
                         </li>
                         <li>
                             <span class="image"><img src="images/feed_MU.png" alt="" style="height:400px;"></span>
                             <h3>Feed</h3>
-                            <p>Sed lorem amet ipsum dolor et amet nullam consequat a feugiat consequat tempus veroeros sed consequat.</p>
+                            <p>Study the people around you by exploring your feed. Click their profile to build your network of friends!</p>
                         </li>
                     </ul>
                     <footer class="major">
@@ -91,33 +91,20 @@
                 <!-- Second Section -->
                 <section id="second" class="main special">
                     <header class="major">
-                        <h2>Ipsum consequat</h2>
-                        <p>Donec imperdiet consequat consequat. Suspendisse feugiat congue
-                            <br /> posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+                        <h2>Contact Us</h2>
+                        <p>We would love to hear your feedback.
+                        </p>
                     </header>
-                    <ul class="statistics">
-                        <li class="style1">
-                            <span class="icon fa-code-fork"></span>
-                            <strong>5,120</strong> Etiam
-                        </li>
-                        <li class="style2">
-                            <span class="icon fa-folder-open-o"></span>
-                            <strong>8,192</strong> Magna
-                        </li>
-                        <li class="style3">
-                            <span class="icon fa-signal"></span>
-                            <strong>2,048</strong> Tempus
-                        </li>
-                        <li class="style4">
-                            <span class="icon fa-laptop"></span>
-                            <strong>4,096</strong> Aliquam
-                        </li>
-                        <li class="style5">
-                            <span class="icon fa-diamond"></span>
-                            <strong>1,024</strong> Nullam
-                        </li>
-                    </ul>
-                    <p class="content">Nam elementum nisl et mi a commodo porttitor. Morbi sit amet nisl eu arcu faucibus hendrerit vel a risus. Nam a orci mi, elementum ac arcu sit amet, fermentum pellentesque et purus. Integer maximus varius lorem, sed convallis diam accumsan sed. Etiam porttitor placerat sapien, sed eleifend a enim pulvinar faucibus semper quis ut arcu. Ut non nisl a mollis est efficitur vestibulum. Integer eget purus nec nulla mattis et accumsan ut magna libero. Morbi auctor iaculis porttitor. Sed ut magna ac risus et hendrerit scelerisque. Praesent eleifend lacus in lectus aliquam porta. Cras eu ornare dui curabitur lacinia.</p>
+                    <span class="image"><img src="images/juan_team.png" alt="" style="height:120px;width:120px;"></span>
+
+
+                    <span class="image"><img src="images/kat_team.png" alt="" style="height:120px;width:120px"></span>
+
+                    <span class="image"><img src="images/rashid_team.png" alt="" style="height:120px;"></span>
+                    <span class="image"><img src="images/rokney_team.png" alt="" style="height:120px;"></span>
+
+
+                    <p class="content">Team Klass lives and breathes its post-modern social network. Everything we do is to advance our technology so that the common man can understand who was once foreign. Our hope is to provide a tool to bring humanity to the truth about ourselves and each other, one snapshot and rating at a time. Should you have any feedback, contact our team at teamklass@gmail.com. We absolutely love sharing information with you.</p>
                     <footer class="major">
                         <ul class="actions">
                             <li><a href="generic.html" class="button">Learn More</a></li>
@@ -128,14 +115,14 @@
                 <!-- Get Started -->
                 <section id="cta" class="main special">
                     <header class="major">
-                        <h2>Congue imperdiet</h2>
-                        <p>Donec imperdiet consequat consequat. Suspendisse feugiat congue
-                            <br /> posuere. Nulla massa urna, fermentum eget quam aliquet.</p>
+                        <h2>Download</h2>
+                        <p>Download Klass on your mobile device to experience the journey of self discovery.
+                            <br /> You can discover others too.</p>
                     </header>
                     <footer class="major">
                         <ul class="actions">
-                            <li><a href="generic.html" class="button special">Get Started</a></li>
-                            <li><a href="generic.html" class="button">Learn More</a></li>
+                            <li><a href="generic.html" class="button">iOS</a></li>
+                            <li><a href="generic.html" class="button">Android</a></li>
                         </ul>
                     </footer>
                 </section>
@@ -144,32 +131,20 @@
 
             <!-- Footer -->
             <footer id="footer">
+         
                 <section>
-                    <h2>Aliquam sed mauris</h2>
-                    <p>Sed lorem ipsum dolor sit amet et nullam consequat feugiat consequat magna adipiscing tempus etiam dolore veroeros. eget dapibus mauris. Cras aliquet, nisl ut viverra sollicitudin, ligula erat egestas velit, vitae tincidunt odio.</p>
-                    <ul class="actions">
-                        <li><a href="generic.html" class="button">Learn More</a></li>
-                    </ul>
-                </section>
-                <section>
-                    <h2>Etiam feugiat</h2>
+                    <h2>Partners</h2>
                     <dl class="alt">
-                        <dt>Address</dt>
-                        <dd>1234 Somewhere Road &bull; Nashville, TN 00000 &bull; USA</dd>
-                        <dt>Phone</dt>
-                        <dd>(000) 000-0000 x 0000</dd>
-                        <dt>Email</dt>
-                        <dd><a href="#">information@untitled.tld</a></dd>
+                        <dt>CIA</dt>
+                        <dd>Platinum</dd>
+                        <dt>NSA</dt>
+                        <dd>Gold</dd>
+                        <dt>FBI</dt>
+                        <dd>Silver</dd>
                     </dl>
-                    <ul class="icons">
-                        <li><a href="#" class="icon fa-twitter alt"><span class="label">Twitter</span></a></li>
-                        <li><a href="#" class="icon fa-facebook alt"><span class="label">Facebook</span></a></li>
-                        <li><a href="#" class="icon fa-instagram alt"><span class="label">Instagram</span></a></li>
-                        <li><a href="#" class="icon fa-github alt"><span class="label">GitHub</span></a></li>
-                        <li><a href="#" class="icon fa-dribbble alt"><span class="label">Dribbble</span></a></li>
-                    </ul>
+                  
                 </section>
-                <p class="copyright">&copy; Untitled. Design: <a href="https://html5up.net">HTML5 UP</a>.</p>
+                <p class="copyright">&copy; Klass Inc. Just kidding. </p>
             </footer>
 
         </div>
