yo im done fam -kat

--- a/klass_site/index.html
+++ b/klass_site/index.html
@@ -3,11 +3,13 @@
 	Stellar by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+
+    Team Klass Updates - 2/18/2017
 -->
 <html>
 
 <head>
-    <title>Stellar by HTML5 UP</title>
+    <title>Klass</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <!--[if lte IE 8]><script src="assets/js/ie/html5shiv.js"></script><![endif]-->
@@ -81,11 +83,7 @@
                             <p>Study the people around you by exploring your feed. Click their profile to build your network of friends!</p>
                         </li>
                     </ul>
-                    <footer class="major">
-                        <ul class="actions">
-                            <li><a href="generic.html" class="button">Learn More</a></li>
-                        </ul>
-                    </footer>
+                 
                 </section>
 
                 <!-- Second Section -->
@@ -105,11 +103,7 @@
 
 
                     <p class="content">Team Klass lives and breathes its post-modern social network. Everything we do is to advance our technology so that the common man can understand who was once foreign. Our hope is to provide a tool to bring humanity to the truth about ourselves and each other, one snapshot and rating at a time. Should you have any feedback, contact our team at teamklass@gmail.com. We absolutely love sharing information with you.</p>
-                    <footer class="major">
-                        <ul class="actions">
-                            <li><a href="generic.html" class="button">Learn More</a></li>
-                        </ul>
-                    </footer>
+                   
                 </section>
 
                 <!-- Get Started -->
@@ -117,12 +111,12 @@
                     <header class="major">
                         <h2>Download</h2>
                         <p>Download Klass on your mobile device to experience the journey of self discovery.
-                            <br /> You can discover others too.</p>
+                            <br /> You will discover others too.</p>
                     </header>
                     <footer class="major">
                         <ul class="actions">
-                            <li><a href="generic.html" class="button">iOS</a></li>
-                            <li><a href="generic.html" class="button">Android</a></li>
+                            <li><a href="https://itunes.apple.com/us/genre/ios/id36?mt=8" class="button">iOS</a></li>
+                            <li><a href=https://play.google.com/store/apps class="button">Android</a></li>
                         </ul>
                     </footer>
                 </section>
